export const snapshot = {};

snapshot[`Initiative Comment Add Command - By UUID With Body Flag 1`] = `
stdout:
"✓ Comment added to initiative 0a1b2c3d-4e5f-4a6b-8c7d-9e0f1a2b3c4d
https://linear.app/team/initiative/platform-abc123/activity#comment-uuid-1
"
stderr:
""
`;

snapshot[`Initiative Comment Add Command - By Name With Reply To Flag 1`] = `
stdout:
"✓ Comment added to initiative Platform
https://linear.app/team/initiative/platform-abc123/activity#comment-uuid-2
"
stderr:
""
`;

snapshot[`Initiative Comment Add Command - Help 1`] = `
stdout:
"
Usage: add <initiative>

Description:

  Add a comment or reply to an initiative's discussion (by ID, slug, or name)     
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                             - Show this help.                                                   
  -b, --body                <text>       - Comment body text                                                 
  --body-file               <path>       - Read comment body from a file (preferred for markdown content)    
  -p, --parent, --reply-to  <commentId>  - Reply to a top-level comment by ID (the reply joins that thread)  

"
stderr:
""
`;
